--- a/style.css
+++ b/style.css
@@ -869,6 +869,77 @@ body, html {
     filter: opacity(0);
     transition-timing-function: ease;
   }
+  .otherprojects {
+    height: auto;
+    padding: 2vh 2vw;
+    box-sizing: border-box;
+    width: 100%;
+    /* border-bottom: 1px solid #282828; */
+    /* border-top: 1px solid #282828; */
+    /* box-shadow: 0px 0px 10px gray; */
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* color: white; */
+    background: linear-gradient(to right, #80008026, black, black);
+    /* flex-direction: column; */
+  }
+  .cardscontainer {
+    height: auto;
+    width: 95%;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    /* border: 1px solid blue; */
+    /* border-radius: 60px; */
+    overflow-x:auto;
+    display: flex;
+    /* justify-content: space-around; */
+    align-items: center;
+    /* flex-wrap: wrap; */
+    gap: 10px 15px;
+  }
+  .card {
+    height: 270px;
+    width: 200px;
+    /* border: 1px solid green; */
+    border-radius: 20px;
+    background-color: #161616;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    transition-duration: 0.3s;
+    transition-property: all;
+    transition-timing-function: ease;
+  }
+  .card:hover {
+    box-shadow: 0px 0px 5px 1px #00ff009c;
+    transform: scale(1.02);
+  }
+  .imgcont {
+    height: auto;
+    width: auto;
+    /* border: 1px solid green; */
+    border-radius: 15px;
+  }
+  .imgcont img {
+    width: 100%;
+    border-radius: inherit;
+    box-shadow: 0px 0px 5px black;
+    /* border: 1px solid green; */
+  }
+  .cardanchor {
+    text-decoration: none;
+    font-family: "Bebas Neue", sans-serif;
+  }
+  .cardcont {
+    /* color: white; */
+    color: var(--color);
+    font-size: 2rem;
+    margin-top: 10px;
+    text-align: center;
+  }
+
+
   .more {
     color: white;
     text-align: end;
@@ -1302,7 +1373,18 @@ body, html {
     .more {
       text-align: center;
     }
-
+    .card {
+      height: 150px;
+      width: 100px;
+      border-radius: 8px;
+    }
+    .imgcont {
+      height: 85px;
+      border-radius: 5px;
+    }
+    .cardcont {
+      font-size: 1rem;
+    }
     .s1 :nth-child(1) {
         font-size: 30px;
       }
