--- a/style.css
+++ b/style.css
@@ -1450,7 +1450,7 @@ body, html {
       height: 300px;
       width: 300px;
       top: 60%;
-      left: 20%;
+      right: 20%;
     }
     .slide-show svg {
       width: 280px;
