--- a/style.css
+++ b/style.css
@@ -55,9 +55,7 @@ body {
     scroll-behavior: smooth;
     cursor: none;
 }
-audio {
-    
-}
+
 .main-cursor {
     height: 30px;
     width: 30px;
@@ -490,11 +488,7 @@ nav a {
     position: relative;
     z-index: 1;
 }
-.animate-splitted-letter3 {
-    /* position: relative; */
-    /* z-index: 1; */
-    /* color: orange; */
-}
+
 
 
 .animateLetter3Overlay {
@@ -691,9 +685,7 @@ nav a {
     border-radius: 50px;
     /* cursor: pointer; */
 }
-.here {
-    /* border: 1px solid red; */
-}
+
 .sub-right a {
     text-decoration: none;
 }
@@ -1459,10 +1451,11 @@ nav a {
 
 .main25 {
 /* border: 1px solid cyan; */
+width: 100%;
 margin-top: 100px;
 position: relative;
 }
-.main25 p {
+.main25 .why {
     padding: 50px 100px;
     display: flex;
     align-items: center;
@@ -1472,22 +1465,26 @@ position: relative;
 
 .main-para {
     padding: 50px 100px;
-    display: flex;
-    /* width: 100vw; */
+    /* display: flex; */
+    /* width: 500px; */
     /* height: 70vh; */
-    align-items: center;
-    justify-content: center;
+    /* align-items: center; */
+    /* justify-content: center; */
     text-align: center;
     /* border: 1px solid red; */
     font-family: "Caveat", cursive;
     font-size: 2rem;
-    color: #8d8c82;
+    color: #5f5f5f;
     /* background: url("assets/images/aicapsule.jpg") no-repeat center;
     background-size: cover;
     -webkit-background-clip: cover;
     -webkit-text-fill-color: transparent; */
 }
-
+.main-para span {
+    display: inline-block;
+    /* padding: 0px; */
+    /* border: 1px solid yellow; */
+}
 .main25 > svg {
     position: absolute;
     /* width: 100px; */
