--- a/style.css
+++ b/style.css
@@ -1474,7 +1474,7 @@ position: relative;
     /* border: 1px solid red; */
     font-family: "Caveat", cursive;
     font-size: 2rem;
-    color: #5f5f5f;
+    color: #1e1e1e;
     /* background: url("assets/images/aicapsule.jpg") no-repeat center;
     background-size: cover;
     -webkit-background-clip: cover;
